fix: stack footer links correctly on mobile

--- a/themes/skycoin/static/css/scss/_footer.scss
+++ b/themes/skycoin/static/css/scss/_footer.scss
@@ -7,14 +7,16 @@
   padding: 1rem;
 
   &__link {
-    margin-right: 2.5rem;
-    margin-left: 2.5rem;
     margin-top: 0.5rem;
     color: $cool-gray;
+    width: 100%;
+    text-align: center;
 
-    @media (min-width: $breakpoint-xs) {
+    @media (min-width: $breakpoint-sm) {
       margin-left: 0;
       margin-top: 0;
+      margin-right: 2.5rem;
+      width: auto;
 
       &:last-of-type {
         margin-right: 0;
